--- a/views/pages/index.templ
+++ b/views/pages/index.templ
@@ -14,12 +14,12 @@ templ Home() {
 			<script src="https://unpkg.com/htmx.org@2.0.3" integrity="sha384-0895/pl2MU10Hqc6jd4RvrthNlDiE9U1tWmX7WRESftEDRosgxNsQG/Ze9YMRzHq" crossorigin="anonymous"></script>
 			<link rel="stylesheet" type="text/css" href="/public/main.css"/>
 			<script src="/public/main.js" defer></script>
-			<title>Document</title>
+			<title>GoMailMark</title>
 		</head>
 		<body class="w-full h-full min-h-svh">
 			<main class="p-4">
 				<div>
-					<h1 class="text-xl">Email Signature Generator</h1>
+					<h1 class="text-xl">GoMailMark</h1>
 					@components.Form(templ.Attributes{
 						"action":      "/",
 						"method":      "post",
